DSTEW-1475: WIP - added a validation to check that the field to sort on is one of the valid ones.